Update extension name to 'Show a Random Trello Card'

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Trello Random Card",
+  "name": "Show a Random Trello Card",
   "version": "1.0",
   "description": "Displays a random card from a specified Trello board in new tabs",
   "permissions": [
