--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,9 @@
     "newtab": "newtab.html"
   },
   "icons": {
-    "48": "icons/icon.svg",
-    "128": "icons/icon.svg"
+    "16": "icons/icon16.png",
+    "32": "icons/icon32.png",
+    "48": "icons/icon64.png",
+    "128": "icons/icon128.png"
   }
 }
