--- a/manifest.json
+++ b/manifest.json
@@ -4,13 +4,26 @@
   "version": "1.1",
   "description": "Displays a random card from a specified Trello board in new tabs",
   "permissions": [
-    "storage"
+    "storage",
+    "tabs"
   ],
   "host_permissions": [
     "https://api.trello.com/*"
   ],
   "chrome_url_overrides": {
     "newtab": "newtab.html"
+  },
+  "background": {
+    "service_worker": "background.js"
+  },
+  "action": {
+    "default_icon": {
+      "16": "icons/icon16.png",
+      "32": "icons/icon32.png",
+      "48": "icons/icon64.png",
+      "128": "icons/icon128.png"
+    },
+    "default_title": "Show a Random Trello Card"
   },
   "icons": {
     "16": "icons/icon16.png",
